<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Register"
    android:orientation="vertical"
    android:padding="25dp">

    <!-- Phần đầu với logo và ngôn ngữ -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <!-- Nút chọn ngôn ngữ -->
        <Button
            android:id="@+id/btn_Language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VN"/>
    </LinearLayout>

    <!-- Logo -->
    <ImageView
        android:id="@+id/img_Logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_launcher_foreground" />

    <!-- Tiêu đề Đăng ký -->
    <TextView
        android:id="@+id/tv_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/register"
        android:textSize="48sp"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

    <!-- Tên đăng nhập -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp">

        <EditText
            android:id="@+id/et_User"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:hint="@string/username"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp">

        <EditText
            android:id="@+id/et_Email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Mật khẩu -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_Pass"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints=""
                android:hint="@string/password"
                android:inputType="textPassword"
                android:importantForAccessibility="yes" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv_Show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_show"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:contentDescription="@string/show_pass"/>
    </LinearLayout>


    <!--Xác nhận mật khẩu -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp">

        <EditText
            android:id="@+id/et_CPass"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:hint="@string/cPass"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Nút Đăng ký và Đăng nhập -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <!-- Nút Đăng nhập -->
        <Button
            android:id="@+id/btn_Login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:text="@string/login" />

        <!-- Nút Đăng ký -->
        <Button
            android:id="@+id/btn_Register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:text="@string/register" />
    </LinearLayout>

</LinearLayout>
