<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Fragment.admin.TonKhoFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:padding="16dp">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <!-- Table Header -->
            <TableRow
                android:background="@color/green">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/codeProduct"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:layout_weight="2"
                    android:padding="8dp"
                    android:text="@string/nameProduct"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/price"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/quantity"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/supplier"
                    android:textStyle="bold" />
            </TableRow>

            <!-- Data will be added dynamically here -->

        </TableLayout>

    </ScrollView>
</FrameLayout>