<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:elevation="6dp"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvTenKhachHang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CustomerName"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingBottom="8dp" />

        <TextView
            android:id="@+id/tvDiaChi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Address"
            android:textSize="16sp"
            android:paddingBottom="6dp" />

        <TextView
            android:id="@+id/tvTongTien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TotalAmount"
            android:textSize="16sp"
            android:paddingBottom="4dp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
