<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="6dp"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="#E8DFDF"
    android:padding="16dp">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:paddingBottom="8dp" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:paddingBottom="6dp" />

    <TextView
        android:id="@+id/tv_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Role"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:paddingBottom="4dp" />

    </LinearLayout>

    </androidx.cardview.widget.CardView>
